# QuizBotArchived

./: .gitignore  README.md  dbs.sh  main.py  pyproject.toml  requirements.txt  run.py
app/: dialog.py  handlers.py  lastBotMsgMiddleWare.py  middle.py  reply_markups.py  start.py
app/dialogs/main_menu/: dialog.py
app/dialogs/reg/: dialog.py  on_event.py
app/states/: main_menu.py  reg.py
