[tool.poetry]
name = "quizbot"
version = "0.1.0"
description = "description"
authors = ["WESHOK <gdvarta@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
aiogram-dialog = "^2.1.0"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
surrealdb = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
